@@ -4,6 +4,8 @@
 	strcasecmp/strncasecmp
 	* win/tkWinDialog.c   Fix [Bug 2987995]: Tk_GetOpenFile returns garbage
 	under described circumstances, minor formatting.
+	* win/tkWinDialog.c   [Patch 2898255]: Filenames limit with Tk_GetFileName()
+	Assure modern style dialogs where available
 
 2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>
 
